--- a/experiments/webOShdmi.html
+++ b/experiments/webOShdmi.html
@@ -1,3 +1,3 @@
-<video autoplay style="width:100%;height:100%">
+<video autoplay style="width:1920px; height:1080px;">
   <source type="service/webos-external" src="ext://hdmi:1"></source>
 </video>
