--- a/experiments/webOShdmi.html
+++ b/experiments/webOShdmi.html
@@ -1,3 +1,3 @@
-<video autoplay style="width:100%; height:1080px100%; image-rendering: pixelated;">
+<video autoplay style="width:100%; height:100%; image-rendering: pixelated;" id="videoInput">
   <source type="service/webos-external" src="ext://hdmi:1"></source>
 </video>
